--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     
   },
   "devDependencies" : {
-    "litpro" : "^0.11.1",
+    "litpro" : "^0.12.1",
     "cheerio" : "^0.19.0",
     "markdown-it" : "^4.4.0",
     "markdown-it-anchor" : "^2.3.0",
@@ -31,7 +31,8 @@
     "postcss" : "^5.0.4",
     "autoprefixer" : "^6.0.0",
     "gm" : "^1.18.1",
-    "pdf-image" : "^1.0.1"
+    "pdf-image" : "^1.0.1",
+    "node-sass" : "^3.4.2"
   },
   "scripts" : { 
     "test" : "node ./test.js"
