--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cheerio" : "^0.19.0",
     "markdown-it" : "^4.4.0",
     "markdown-it-anchor" : "^2.3.0",
+    "litpro-jshint" : "^0.2.1",
     "jade" : "^1.11.0",
     "postcss" : "^5.0.4",
     "autoprefixer" : "^6.0.0",
